radv: significantly less performance than amdgpu-pro in the AMD FSR2 sample
The AMD FSR2 sample app performs significantly worse with RADV than with amdgpu-pro. Default settings just starting the app is about 92 fps with RADV (latest main or 22.1.7), 102 fps with amdvlk, and 186 fps with amdgpu-pro 22.20 on a 6700XT.
RADV_DEBUG=llvm or RADV_DEBUG=nonggc make it even slower.
To reproduce download the latest windows build of the sample app from the github release section, extract, and run with:
cd FidelityFX-FSR2-v2.1.0/bin
wine FSR2_Sample_VK.exe
my vulkaninfo: vkinfo.txt
Edited by M Briar